# hrem

./: README.md  pyproject.toml
models/v2.0/: model.toml  training.toml
models/v2.1/: model.toml  training.toml
models/v2.2/: model.toml
models/v2.3/: model.toml  training.toml
models/v2.4/: model.toml
models/v2.4s/: model.toml  training.toml
models/v2.5/: model.toml  training.toml
notebooks/: inference.ipynb  results.ipynb  style.mplstyle
src/hrem/: __init__.py  models.py  utils.py
src/hrem/datasets/: __init__.py  rt3d_dataset.py
src/rtem/: models.py  utils.py
src/rtem/datasets/: __init__.py  rt3d_dataset.py
